--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-streamlit==1.28.0
-torch==2.1.0
-transformers==4.35.0
-accelerate==0.24.1
-bitsandbytes==0.41.2
-Pillow==10.1.0
+streamlit
+requests
+pillow
